--- a/static/style.css
+++ b/static/style.css
@@ -1,16 +1,88 @@
+html {
+    position: relative;
+    min-height: 100%;
+}
+body {
+    height: 100%;
+    margin-bottom: 60px; /* Margin bottom by footer height */
+}
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px; /* Set the fixed height of the footer here */
+    line-height: 60px; /* Vertically center the text there */
+    background-color: #f5f5f5;
+}
+
 .float{
-	position:fixed;
-	width:60px;
-	height:60px;
-	bottom:40px;
-	right:40px;
-	background-color:rgb(34, 37, 41);
-	color:#FFF;
-	border-radius:50px;
-	text-align:center;
-	box-shadow: 2px 2px 3px #999;
+    position:fixed;
+    width:60px;
+    height:60px;
+    bottom:40px;
+    right:40px;
+    background-color:rgb(34, 37, 41);
+    color:#FFF;
+    border-radius:50px;
+    text-align:center;
+    box-shadow: 2px 2px 3px #999;
+    z-index: 1000;
 }
 
 .my-float{
-	margin-top:22px;
+    margin-top:18px;
+    width:25px;
+    height:25px;
+    content:url("../static/img/calculator_light.png");
+}
+
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px; /* Set the fixed height of the footer here */
+    line-height: 60px; /* Vertically center the text there */
+    background-color: #f5f5f5;
+}
+
+.body-dark {
+    margin-bottom: 60px; /* Margin bottom by footer height */
+    background-color: #202020;
+}
+.footer-dark {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 60px; /* Set the fixed height of the footer here */
+    line-height: 60px; /* Vertically center the text there */
+    background-color: rgb(34, 37, 41);
+}
+
+.card-dark {
+    background-color: rgb(34, 37, 41);
+}
+
+.card-body-dark {
+    color: rgb(241, 241, 241) !important;
+}
+
+.float-dark{
+    position:fixed;
+    width:60px;
+    height:60px;
+    bottom:40px;
+    right:40px;
+    background-color:rgb(34, 37, 41);
+    color:#FFF;
+    border-radius:50px;
+    text-align:center;
+    box-shadow: 2px 2px 3px #111;
+    z-index: 1000;
+}
+
+.my-float-dark{
+    margin-top:18px;
+    width:25px;
+    height:25px;
+    content:url("../static/img/dark.png");
 }
